--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,10 +3,11 @@ This package should look like Unitful.jl but behave like DynamicQuantities.jl un
 
 Current Tasks:
 1.  For consistency with the ecosystem around Unitful, we will need to subtype Quantity to Number
-    -   Remove MirrorDims and replace with the sentinel value approach (unknown(D))
-    -   Add specific "Array" multiplication/division ops with numeric quantities check Unitful.jl
+    -   Remove MirrorDims and replace with the sentinel value approach (unknown(::Type{D}))
+    -   Add specific "Array" multiplication/division ops with numeric quantities (check what Unitful.jl does)
     -   See if we can get DifferentialEquations to work with this (Try it with Unitful first and identify missing features)
-    -   Add NaN support for FixRat32 and make D(NaN) the sentinel value
+    -   Add typemin/typemax/one/onunit support for FixRat32 and make the sentinel value
+        -   unknown(::Type{D}) where {T, D<:AbstractDimensions{T}} = D{T}(typemin(T)) the sentinel value
     -   Add paramerization of AffineTransform (so people can opt into Rational)
     -   Streamline promotions around FlexQuant and Quantity (and will likely need generalization)
     -   Auto-convert to dimensions only applies to StaticDims, but it really should apply to "*"
